learned about callbacks, higher order functions, promises

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "namaste-javascript",
   "version": "1.0.0",
   "description": "",
-  "main": "callbackFunctions.js",
+  "main": "promises.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   }
 }
